blog overflow bug fix

--- a/src/components/Events/style.scss
+++ b/src/components/Events/style.scss
@@ -3,6 +3,7 @@
     min-height: 92vh;
 
     .events-page-medium-container {
+        min-height: 89.6vh;
         padding: 100px;
 
         .page-title {
